<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="E_DataExchangeLD" Id="{22af2a7f-2d74-4bd7-98e9-4ca1f9e7646b}">
    <Declaration><![CDATA[TYPE E_DataExchangeLD :
(
	IDLE,
	ConnectServer,
	ExchangeData,
	Succeed,
	ERROR
)UDINT;
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>